[gd_scene load_steps=14 format=2]

[ext_resource path="res://Demon.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tiles/layers/town.png" type="Texture" id=2]
[ext_resource path="res://assets/tiles/layers/clouds.png" type="Texture" id=3]
[ext_resource path="res://DemonChrome.gd" type="Script" id=4]
[ext_resource path="res://obs.tscn" type="PackedScene" id=5]
[ext_resource path="res://ghost.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/font/Kenney Pixel Square.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://start.gd" type="Script" id=8]
[ext_resource path="res://game_over.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 159.5, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 90 )

[sub_resource type="DynamicFont" id=4]
size = 5
font_data = ExtResource( 7 )

[node name="DemonChrome" type="Node2D"]
script = ExtResource( 4 )
scene_obstacle = [ ExtResource( 5 ), ExtResource( 6 ) ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="cloud" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 256, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/cloud"]
position = Vector2( 160.5, 85.5 )
scale = Vector2( 1.24609, 0.948864 )
texture = ExtResource( 3 )

[node name="castle" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 256, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/castle"]
position = Vector2( 0, 4 )
scale = Vector2( 1.25, 1 )
texture = ExtResource( 2 )
centered = false

[node name="obs_container" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="start" type="Label" parent="Camera2D"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -12.0
margin_right = 30.0
margin_bottom = 12.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.054902, 0.0666667, 1 )
custom_fonts/font = SubResource( 3 )
text = "Start"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="game_over" type="Label" parent="Camera2D"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -6.0
margin_right = 90.0
margin_bottom = 18.0
rect_min_size = Vector2( 10, 20 )
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.054902, 0.0666667, 1 )
custom_fonts/font = SubResource( 3 )
text = "GAME OVER"
align = 1
valign = 1
script = ExtResource( 9 )

[node name="Demon" parent="Camera2D" instance=ExtResource( 1 )]
position = Vector2( -156, -88 )

[node name="ground" type="StaticBody2D" parent="Camera2D"]
position = Vector2( -160, -90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/ground"]
position = Vector2( 160, 186 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="obs_eraser" type="Area2D" parent="Camera2D"]
position = Vector2( -177, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/obs_eraser"]
shape = SubResource( 2 )

[node name="score" type="Label" parent="Camera2D"]
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -70.0
margin_right = -104.0
margin_bottom = -46.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.054902, 0.0666667, 1 )
custom_fonts/font = SubResource( 3 )
text = "0000"
align = 1

[node name="high_score" type="Label" parent="Camera2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -85.0
margin_right = 12.0
margin_bottom = -61.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.054902, 0.0666667, 1 )
custom_fonts/font = SubResource( 3 )
text = "High Score : 0000"
align = 1

[node name="version" type="Label" parent="Camera2D"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 72.0
margin_top = -85.0
margin_right = 117.0
margin_bottom = -76.0
custom_fonts/font = SubResource( 4 )
text = "DEMO VERSION"
valign = 1

[node name="obs_pos" type="Position2D" parent="."]
position = Vector2( 400, 154 )

[node name="obs_y_pos_1" type="Position2D" parent="."]
position = Vector2( 400, 130 )

[node name="obs_y_pos_2" type="Position2D" parent="."]
position = Vector2( 400, 106 )

[connection signal="area_entered" from="Camera2D/obs_eraser" to="." method="_on_obs_eraser_area_entered"]
